Refactor World.java to fix condition for entering BossWarScreen